2008-03-12  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: disable c99 check for now.
    * plugins/Makefile.am:
    * plugins/perf/Makefile.am:
    * plugins/perf/ccm-perf.c:
    * plugins/perf/ccm-perf.h:
    * plugins/perf/ccm-perf.plugin.desktop.in:
    * plugins/perf/ccm-perf.schemas.in:
    * src/ccm-screen.c: Move performance check in a plugin, for now only check
                        FPS.

2008-03-10  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/mosaic/ccm-mosaic.c:
    * src/ccm-display.c:
    * src/ccm-pixmap-glitz.c:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap.c:
    * src/ccm-screen.c:
    * src/ccm-window-glitz.c:
    * src/ccm-window-xrender.c:
    * src/ccm-window.c: Fix some fallback cases

2008-03-06  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Use new api for bind tex image.

2008-03-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Bind tex image directly instead damage texture.
    
    * src/ccm-screen.c: use gdk_threads_add_timeout_full instead g_timeout
                        only fo testing for now

2008-03-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-image.c: Don't repair covered area.

    * src/ccm-pixmap.c: Add y inverted property.
    
    * plugins/freeze/ccm-freeze.c:
    * plugins/magnifier/ccm-magnifier.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-pixmap-glitz.c:
    * src/ccm-window-plugin.c:
    * src/ccm-window-plugin.h:
    * src/ccm-window.c: Add y invert parameter to ccm_window_paint plugin
                        interface.
    
    * data/cairo-compmgr.schemas.in:
    * src/ccm-screen.c:
    * src/ccm-screen.h: Add indirect rendering gconf option.

    * src/ccm-window-glitz.c: Check for indirect rendering and set y invert 